--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_PARADA_URL=http://127.0.0.1:8000/parada
+VITE_API_PARADA_URL=https://gentle-salmiakki-fc48be.netlify.app/
 VITE_API_NOMINATIM_URL=https://nominatim.openstreetmap.org/reverse
