--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_PARADA_URL=https://gentle-salmiakki-fc48be.netlify.app/
+VITE_API_PARADA_URL=https://papaya-florentine-f44620.netlify.app
 VITE_API_NOMINATIM_URL=https://nominatim.openstreetmap.org/reverse
